--- a/accelerate_config.yaml
+++ b/accelerate_config.yaml
@@ -4,10 +4,10 @@ deepspeed_config:
   deepspeed_multinode_launcher: standard
   #gradient_accumulation_steps: auto
   #gradient_clipping: auto
-  offload_optimizer_device: cpu
-  offload_param_device: cpu
-  # zero3_init_flag: false
-  # zero3_save_16bit_model: false
+  offload_optimizer_device: none
+  offload_param_device: none
+  zero3_init_flag: true
+  zero3_save_16bit_model: true
   zero_stage: 3
 distributed_type: DEEPSPEED
 downcast_bf16: 'no'
