added key fields to dataset config

--- a/conf/data/dataset/python-codes.yaml
+++ b/conf/data/dataset/python-codes.yaml
@@ -1,4 +1,6 @@
 name: python-codes
+label_field: "output"
+input_field: "instruction"
 HF_cls:
   _target_: datasets.load_dataset
   path: flytech/python-codes-25k
